--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.26.0",
+    "eslint-plugin-rxjs": "^4.0.0",
+    "eslint-plugin-unused-imports": "^1.1.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
