--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsdoc": "^36.1.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-rxjs": "^4.0.0",
     "eslint-plugin-unused-imports": "^1.1.5",
     "jasmine-core": "~3.8.0",
