--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,21 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+
+        "@typescript-eslint/no-explicit-any": "off",
+
+        "rxjs/no-async-subscribe": ["error"],
+        "rxjs/no-create": ["error"],
+        "rxjs/no-ignored-notifier": ["error"],
+        "rxjs/no-ignored-replay-buffer": ["error"],
+        "rxjs/no-index": ["error"],
+        "rxjs/no-internal": ["error"],
+        "rxjs/no-unsafe-takeuntil": ["error"],
+        "rxjs/no-unsafe-subject-next": ["error"],
+        "rxjs/no-redundant-notify": ["error"],
+        "rxjs/no-subclass": ["error"],
+        "rxjs/no-unbound-methods": ["error"]
       }
     },
     {
