--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
             "style": "kebab-case"
           }
         ],
-
+        "semi": ["error", "always"],
         "@typescript-eslint/no-explicit-any": "off",
 
         "rxjs/no-async-subscribe": ["error"],
