--- a/angular.json
+++ b/angular.json
@@ -114,6 +114,46 @@
           }
         }
       }
+    },
+    "dp": {
+      "projectType": "library",
+      "root": "projects/dp",
+      "sourceRoot": "projects/dp/src",
+      "prefix": "dp",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/dp/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/dp/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/dp/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/dp/src/test.ts",
+            "tsConfig": "projects/dp/tsconfig.spec.json",
+            "karmaConfig": "projects/dp/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/dp/**/*.ts",
+              "projects/dp/**/*.html"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ngx-datepicker",
